Fix resume link and update spacing to fix travis warning

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
 }
 
 /**
@@ -98,7 +98,7 @@ a {
 blockquote {
     color: $quote-color;
     border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
+    padding-left: calc($spacing-unit / 2);
     font-size: 18px;
     letter-spacing: -1px;
 
@@ -173,8 +173,8 @@ pre {
 /* Row */
 @mixin row($inside: false) {
   @if($inside == true) {
-    margin-left: -$spacing-unit/2;
-    margin-right: -$spacing-unit/2;
+    margin-left: -calc($spacing-unit / 2);
+    margin-right: -calc($spacing-unit / 2);
   }
   @else {
     width: 100%;
@@ -203,7 +203,7 @@ pre {
   width: -webkit-calc(#{$width} - (#{$spacing-unit} / 2));
   
   @if($padding == true) {
-    padding-left: $spacing-unit/2;
+    padding-left: calc($spacing-unit / 2);
   }
 }
 
@@ -212,8 +212,8 @@ pre {
   
   @include media-query($on-laptop) {
     max-width: $wrapper;
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
   }
 }
 
